Use Python package fastclasses-json to convert dataclass objects to json

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ dependencies = [
     "tzlocal",
     "unidecode",
     "pyOpenSSL",
+    "case-converter",
+    "fastclasses-json",
 ]
 
 [project.optional-dependencies]
