--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
     "clevercsv",
     "jsonschema",
     "websocket-client",
-    "websockets",
+    "websockets >= 13.0.1",
     "fpdf2 != 2.5.7",
     "pyserial",
     "tzlocal",
@@ -60,6 +60,7 @@ Documentation = "https://ooresults.readthedocs.io/en/latest"
 packages = [
     "ooresults",
     "ooresults.handler",
+    "ooresults.model",
     "ooresults.pdf",
     "ooresults.pdf.fonts",
     "ooresults.plugins",
