--- a/docs/Makefile
+++ b/docs/Makefile
@@ -5,8 +5,9 @@
 # from the environment for the first two.
 SPHINXOPTS    ?=
 SPHINXBUILD   ?= sphinx-build
-SOURCEDIR     = source
-BUILDDIR      = build
+PROJECT       ?= user
+SOURCEDIR     = .
+BUILDDIR      = _build/$(PROJECT)
 
 # Put it first so that "make" without argument is like "make help".
 help:
