--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,10 +78,10 @@ packages = [
     "ooresults.websocket_server",
 ]
 
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
+
 [tool.isort]
 profile = "black"
 force_single_line = "true"
 lines_after_imports = 2
-
-
-
