Use fpdf2 version 2.6.1 due to a performance problem with current fpdf2 versions (fpdf2 bug #1444)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "case-converter",
     "clevercsv",
     "fastclasses-json",
-    "fpdf2 != 2.5.7",
+    "fpdf2 == 2.6.1",
     "iso8601",
     "jsonschema",
     "lxml",
