--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "iso8601",
     "jsonschema",
     "lxml",
+    "Mako == 1.3.10",
     "pyOpenSSL",
     "pyserial",
     "requests",
