--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
     "Operating System :: OS Independent",
     "Intended Audience :: End Users/Desktop",
@@ -37,7 +39,7 @@ dependencies = [
     "sireader",
     "tzlocal",
     "unidecode",
-    "web.py",
+    "web.py @ https://github.com/webpy/webpy/archive/c888e19ccf43fd473991c92ffc878698edc68c1f.zip",
     "websocket-client",
     "websockets >= 14.2",
 ]
@@ -81,6 +83,9 @@ packages = [
 
 [tool.pytest.ini_options]
 asyncio_default_fixture_loop_scope = "function"
+
+[tool.black]
+required-version = "23"
 
 [tool.isort]
 profile = "black"
