--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,6 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: 3.13",
     "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
     "Operating System :: OS Independent",
     "Intended Audience :: End Users/Desktop",
@@ -39,7 +37,7 @@ dependencies = [
     "sireader",
     "tzlocal",
     "unidecode",
-    "web.py @ https://github.com/webpy/webpy/archive/c888e19ccf43fd473991c92ffc878698edc68c1f.zip",
+    "web.py",
     "websocket-client",
     "websockets >= 14.2",
 ]
