--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,12 +95,26 @@ force_single_line = "true"
 lines_after_imports = 2
 
 [tool.ruff.lint]
-select = ["E", "F", "I", "PLC", "PLE", "PLW", "W"]
+select = ["C4", "D", "E", "F", "I", "PLC", "PLE", "PLW", "W"]
 ignore = [
+    # pycodestyle error ignore
     "E501",  # Line too long
+
+    # pylint warning ignore
     "PLW0603",  # Using the global statement to update {name} is discouraged
     "PLW2901",  # Redefined loop name
 
+    # pydocstyle ignore
+    "D100",  # Missing docstring in public module
+    "D101",  # Missing docstring in public class
+    "D102",  # Missing docstring in public method
+    "D103",  # Missing docstring in public function
+    "D104",  # Missing docstring in public package
+    "D105",  # Missing docstring in magic method
+    "D106",  # Missing docstring in public nested class
+    "D107",  # Missing docstring in `__init__`
+    "D203",  # incorrect-blank-line-before-class - incompatible with D211
+    "D213",  # multi-line-summary-second-line - incompatible with D212
 ]
 
 [tool.ruff.lint.isort]
